Fix newsletter submit vertical spacing

--- a/app/_assets/_scss/_components.newsletter.scss
+++ b/app/_assets/_scss/_components.newsletter.scss
@@ -37,3 +37,7 @@
         @extend %input;
         width: 100%;
     }
+
+    .newsletter__submit {
+        @extend .mt-;
+    }
